Split out leaderboard classes between names and alignment class and fix test

--- a/client/src/leaderboard/Leaderboard.css
+++ b/client/src/leaderboard/Leaderboard.css
@@ -19,7 +19,7 @@
     text-align: right;
 }
 
-.leaderboard__cell--name {
+.leaderboard__cell--text {
     text-align: left;
 }
 
